--- a/index.html
+++ b/index.html
@@ -31,6 +31,6 @@
             </div>
         </div>
     </main>
-    <script src="js/index.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
